--- a/.env.template
+++ b/.env.template
@@ -3,8 +3,10 @@
 PORT=3000
 
 
+# En Discord: Crear un nuevo servidor, clic derecho, server settings, overview, integations, webhooks, create, captain hook,
+# personalizar al gusto el nombre y el canal, copiar la url y pegarlo en los environments
 DISCORD_WEBHOOK_URL="https://discord.com/api/webhooks/asdasd"
 
 
-
-SECRET_TOKEN="084ef1534730bc972a197a45cfd1ec100efe2d28"
+#otro por si acaso  084ef1534730bc972a197a45cfd1ec100efe2d28
+SECRET_TOKEN="4510c8cf2fe423f8be5afccbdd30c678677e172b" 
